# wasm-runtime

./: Cargo.toml  README.md
docs/: wasm-module-binary-analysis.txt
src/: logging.rs  main.rs  utils.rs
src/module/: indices.rs  mod.rs  reader.rs  sections.rs  types.rs
test/: test.wasm  test.wat
